Refactor StoriesContentClient and AllStories components to standardize author display and publication date formatting. Updated the layout to improve visual consistency by using flexbox for author and date information.

--- a/lib/i18n/locales/en.json
+++ b/lib/i18n/locales/en.json
@@ -402,7 +402,7 @@
   },
   "storyPage": {
     "backToStories": "Back to stories",
-    "byAuthor": "By {authorName}",
+    "byAuthor": "{authorName}",
     "relatedStories": "RELATED STORIES",
     "readMore": "Read",
     "noRelatedStories": "No related stories found.",
