--- a/lib/i18n/locales/en.json
+++ b/lib/i18n/locales/en.json
@@ -20,7 +20,7 @@
       "legal": "RESOURCES"
     },
     "navigation": {
-      "events": "LE RENDEZ-VOUS SAUVAGE",
+      "events": "RENDEZ-VOUS SAUVAGE",
       "stories": "Stories",
       "merch": "Merch",
       "artists": "Artists",
@@ -31,7 +31,7 @@
   "header": {
     "nav": {
       "home": "HOME",
-      "events": "LE RENDEZ-VOUS SAUVAGE",
+      "events": "RENDEZ-VOUS SAUVAGE",
       "gallery": "ARCHIVES",
       "shop": "MERCH",
       "room": "ARTISTS",
@@ -429,12 +429,15 @@
     "productDetail": {
       "backToMerch": "Back to merch",
       "noImage": "No Image Available",
-      "quantity": "Quantity:",
+      "quantity": "Quantity",
+      "total": "Total",
       "outOfStock": "Out of Stock",
-      "addToCart": "Add to Cart",
+      "addToCart": "Add to cart",
       "inStock": "in stock",
-      "addToWishlist": "Add to Wishlist",
+      "addToWishlist": "Maybe next time",
+      "removeFromWishlist": "Remove from wishlist",
       "share": "Share",
+      "description": "Description",
       "productDetails": "Product Details",
       "productId": "Product ID:",
       "category": "Category: Merchandise",
