--- a/lib/i18n/locales/fr.json
+++ b/lib/i18n/locales/fr.json
@@ -20,7 +20,7 @@
       "legal": "RESSOURCES"
     },
     "navigation": {
-      "events": "LE RENDEZ-VOUS SAUVAGE",
+      "events": "RENDEZ-VOUS SAUVAGE",
       "stories": "Stories",
       "merch": "Merch",
       "artists": "Artistes",
@@ -31,7 +31,7 @@
   "header": {
     "nav": {
       "home": "ACCUEIL",
-      "events": "LE RENDEZ-VOUS SAUVAGE",
+      "events": "RENDEZ-VOUS SAUVAGE",
       "gallery": "ARCHIVES",
       "shop": "MERCH",
       "room": "ARTISTES",
@@ -429,12 +429,15 @@
     "productDetail": {
       "backToMerch": "Retour au merch",
       "noImage": "Aucune image disponible",
-      "quantity": "Quantité :",
+      "quantity": "Quantité",
+      "total": "Total",
       "outOfStock": "Rupture de stock",
       "addToCart": "Ajouter au panier",
       "inStock": "en stock",
       "addToWishlist": "Ajouter à la liste d'envies",
+      "removeFromWishlist": "Retirer de la liste d'envies",
       "share": "Partager",
+      "description": "Description",
       "productDetails": "Détails du produit",
       "productId": "ID produit :",
       "category": "Catégorie : Produits dérivés",
