Implement Archives feature by creating ArchivesPage and ArchivesClientComponent. The ArchivesPage serves as a server component that renders the ArchivesClientComponent, which handles image fetching and display. Updated global styles to fix autofill background color for dark themes. Refactored various components to replace references from "gallery" to "archives" for consistency. Enhanced localization files to include new entries for the Archives section, improving user experience and accessibility. Additionally, removed deprecated components and optimized existing ones for better performance.

--- a/lib/i18n/locales/en.json
+++ b/lib/i18n/locales/en.json
@@ -14,6 +14,10 @@
       "sendButton": "Send Message",
       "sendError": "Failed to send email"
     },
+    "newsletter": {
+      "placeholder": "Subscribe to newsletter",
+      "sendButton": "Send"
+    },
     "sections": {
       "explore": "EXPLORE",
       "connect": "CONNECT",
@@ -450,9 +454,14 @@
       "copyLink": "Copy link"
     }
   },
+  "archivesPage": {
+    "title": "Archives",
+    "description": "Explore our collection of memories, moments, and visual stories that capture the essence of Kamayakoi's journey.",
+    "noImages": "No images available."
+  },
   "merchPage": {
     "title": "Merch",
-    "subtitle": "Shop exclusive Kamayakoi merchandise, apparel, and collectibles. Support the movement with our unique designs and products crafted for the wild at heart.",
+    "subtitle": "Shop exclusive Kamayakoi merch, apparel, and collectibles. Support the movement with our unique designs and products crafted for the wild at heart.",
     "breadcrumb": "Shop",
     "loading": "Loading...",
     "comingSoon": {
