--- a/lib/i18n/locales/fr.json
+++ b/lib/i18n/locales/fr.json
@@ -14,6 +14,10 @@
       "sendButton": "Envoyer le message",
       "sendError": "Échec de l'envoi de l'e-mail"
     },
+    "newsletter": {
+      "placeholder": "S'abonner à la newsletter",
+      "sendButton": "Envoyer"
+    },
     "sections": {
       "explore": "EXPLORER",
       "connect": "À PROPOS",
@@ -449,6 +453,11 @@
       "onTwitter": "Partager sur Twitter",
       "copyLink": "Copier le lien"
     }
+  },
+  "archivesPage": {
+    "title": "Archives",
+    "description": "Explorez notre collection de souvenirs, moments et histoires visuelles qui capturent l'experience Kamayakoi.",
+    "noImages": "Aucune image disponible."
   },
   "merchPage": {
     "title": "Merch",
