--- a/lib/i18n/locales/fr.json
+++ b/lib/i18n/locales/fr.json
@@ -327,17 +327,19 @@
   },
   "paymentSuccess": {
     "title": "Paiement réussi !",
-    "description": "Votre achat de ticket a été complété avec succès.",
+    "description": "Votre achat a été complété avec succès.",
     "orderId": "ID commande : {orderId}",
     "whatsNext": {
       "title": "Et maintenant ?",
-      "checkEmail": "Vérifiez votre email pour votre e-ticket",
-      "presentTicket": "Présentez votre e-ticket QR code à l'événement",
-      "arriveEarly": "Arrivez tôt pour éviter les files d'attente"
+      "checkEmail": "Vérifiez votre email pour les détails de votre commande",
+      "presentTicket": "Présentez votre e-ticket QR code à l'événement (si applicable)",
+      "arriveEarly": "Arrivez tôt pour éviter les files d'attente",
+      "trackOrder": "Suivez votre commande dans votre compte"
     },
     "buttons": {
       "backToEvents": "Retour aux événements",
-      "browseGallery": "Parcourir la galerie"
+      "browseGallery": "Parcourir les archives",
+      "backToMerch": "Retour au merch"
     },
     "support": "Besoin d'aide ? Contactez notre équipe de support"
   },
@@ -347,13 +349,14 @@
     "orderId": "ID commande : {orderId}",
     "whatsNext": {
       "title": "Et maintenant ?",
-      "tryAgain": "Vous pouvez essayer d'acheter des tickets à nouveau",
+      "tryAgain": "Vous pouvez essayer à nouveau",
       "differentMethod": "Choisissez un moyen de paiement différent",
       "contactSupport": "Contactez le support si vous avez besoin d'aide"
     },
     "buttons": {
       "backToEvents": "Retour aux événements",
-      "browseGallery": "Parcourir la galerie"
+      "browseGallery": "Parcourir les archives",
+      "backToMerch": "Retour au merch"
     },
     "support": "Besoin d'aide ? Contactez notre équipe de support"
   },
