Refactor various components to enhance layout consistency and improve code readability. Changes include reintroducing the FeaturedArticles component in the Home page, updating ArchivesClient to group tagged images by their first tag, and adjusting flex properties in EventCard, ArticleCard, MediaCard, and ArtistCard for better visual alignment.

--- a/lib/i18n/locales/en.json
+++ b/lib/i18n/locales/en.json
@@ -460,7 +460,8 @@
   "archivesPage": {
     "title": "Archives",
     "description": "Explore our collection of memories, moments, and visual stories that capture the essence of Kamayakoi's journey.",
-    "noImages": "No images available."
+    "noImages": "No images available.",
+    "untagged": "Unclassified"
   },
   "merchPage": {
     "title": "Merch",
