Update English and French locale files to change placeholder names and emails for consistency across languages.

--- a/lib/i18n/locales/fr.json
+++ b/lib/i18n/locales/fr.json
@@ -272,8 +272,8 @@
       "optional": "Optionnel"
     },
     "placeholders": {
-      "name": "Aïssata Lam",
-      "email": "aissata@gmail.com",
+      "name": "Noe Richer-Willi",
+      "email": "noe@gmail.com",
       "phone": "+2250771234567"
     },
     "totalPrice": "Total:",
