--- a/lib/i18n/locales/en.json
+++ b/lib/i18n/locales/en.json
@@ -272,8 +272,8 @@
       "optional": "Optional"
     },
     "placeholders": {
-      "name": "Aissata Diop",
-      "email": "aissata@gmail.com",
+      "name": "Noe Richer-Willi",
+      "email": "noe@gmail.com",
       "phone": "+221771234567"
     },
     "totalPrice": "Total:",
