Refactor PurchaseFormModal and ContactForm components for improved layout and styling. Enhance PurchaseFormModal to display item stock information conditionally and adjust styles for better responsiveness. Update ContactForm to refine spacing, input styles, and button sizes for a more cohesive user experience. Additionally, add new translation keys for stock availability in English and French locale files.

--- a/lib/i18n/locales/en.json
+++ b/lib/i18n/locales/en.json
@@ -262,6 +262,7 @@
   "purchaseModal": {
     "title": "Purchase tickets",
     "description": "Complete your order details",
+    "only": "Only",
     "includesTickets": "Includes {count} ticket(s)",
     "ticketsGenerated": "Tickets to be generated",
     "labels": {
