--- a/lib/i18n/locales/fr.json
+++ b/lib/i18n/locales/fr.json
@@ -262,6 +262,7 @@
   "purchaseModal": {
     "title": "Acheter un billet",
     "description": "Complétez les détails de votre commande",
+    "only": "Seulement",
     "includesTickets": "Inclut {count} billet(s)",
     "ticketsGenerated": "Billets à générer",
     "labels": {
