Update date formatting in HeroSection component to support localization based on current language. Adjusted date display for events and non-events to use either French or English formats, enhancing accessibility for users in different locales.

--- a/lib/i18n/locales/en.json
+++ b/lib/i18n/locales/en.json
@@ -263,6 +263,8 @@
     "title": "Purchase tickets",
     "description": "Complete your order details",
     "only": "Only",
+    "available": "available",
+    "availablePlural": "available",
     "includesTickets": "Includes {count} ticket(s)",
     "ticketsGenerated": "Tickets to be generated",
     "labels": {
