--- a/lib/i18n/locales/fr.json
+++ b/lib/i18n/locales/fr.json
@@ -39,7 +39,7 @@
       "gallery": "ARCHIVES",
       "shop": "MERCH",
       "room": "ARTISTES",
-      "blog": "STORIES",
+      "blog": "BLOG",
       "soon": "SOON"
     },
     "mobileMenu": {
@@ -52,9 +52,9 @@
     "opensource": "Ce site web est open-source."
   },
   "termsPage": {
-    "pageTitle": "Termes et Conditions | Kamayakoi",
-    "pageDescription": "Comprendre les Termes et Conditions d'engagement avec Kamayakoi, le collectif musical et organisateur d'événements pionnier de la scène alternative Électronique d'Abidjan.",
-    "title": "Termes et Conditions",
+    "pageTitle": "Conditions | Kamayakoi",
+    "pageDescription": "Comprendre les Conditions d'engagement avec Kamayakoi, le collectif musical et organisateur d'événements pionnier de la scène alternative Électronique d'Abidjan.",
+    "title": "Conditions",
     "subtitle": "Veuillez lire attentivement ces termes avant d'utiliser nos services ou d'assister à nos événements uniques.",
     "lastUpdated": "Dernière mise à jour : {date}",
     "introduction": {
@@ -453,6 +453,12 @@
       }
     }
   },
+  "storiesPage": {
+    "title": "Stories",
+    "subtitle": "Découvrez des histoires inspirantes, des insights et des récits de notre communauté. Chaque histoire capture l'essence du parcours de Kamayakoi et des personnes qui le rendent spécial.",
+    "noImage": "Aucune image",
+    "readMore": "Lire"
+  },
   "storyPage": {
     "backToStories": "Retour aux stories",
     "byAuthor": "{authorName}",
@@ -474,7 +480,7 @@
     "title": "Archives",
     "description": "Explorez notre collection de souvenirs, moments et histoires visuelles qui capturent l'experience Kamayakoi.",
     "noImages": "Aucune image disponible.",
-    "untagged": "Unclassified"
+    "untagged": "Non classé"
   },
   "merchPage": {
     "title": "Merch",
@@ -503,7 +509,7 @@
       "shipping": "Livraison : Livraison gratuite pour les commandes de plus de 50 000 F CFA"
     },
     "metadata": {
-      "title": "Merch | Kamayakoi",
+      "title": "Merch",
       "description": "Achetez des produits dérivés exclusifs Kamayakoi, des vêtements et des objets de collection. Soutenez le mouvement avec nos designs uniques et produits."
     }
   },
@@ -558,6 +564,21 @@
         "playVideo": "Lire la vidéo",
         "pauseVideo": "Pause vidéo"
       }
+    }
+  },
+  "loading": {
+    "text": "CHARGEMENT"
+  },
+  "heroSection": {
+    "getYourTickets": "Réserver",
+    "getTickets": "Réserver"
+  },
+  "artistsPage": {
+    "title": "Artistes",
+    "subtitle": "Découvrez les artistes talentueux, DJs et créateurs qui donnent vie à Kamayakoi. Des artistes résidents aux performeurs invités, explorez les esprits créatifs derrière notre son et notre vision uniques.",
+    "comingSoon": {
+      "title": "Artistes bientôt disponibles",
+      "description": "Nous travaillons à vous présenter des artistes et créateurs incroyables. Restez à l'écoute !"
     }
   },
   "cardCarousel": {
