feat: Add knip for improved code quality and update theme settings in layout for better UI consistency

--- a/lib/i18n/locales/en.json
+++ b/lib/i18n/locales/en.json
@@ -232,6 +232,9 @@
       "title": "Share this event",
       "subtitle": "Spread the word and invite your friends"
     },
+    "previousEvents": {
+      "title": "Previous events"
+    },
     "hostedBy": "Hosted by {name}",
     "errors": {
       "supabaseNotInitialized": "Online ticketing is temporarily unavailable. Please try again later."
@@ -582,8 +585,8 @@
     "text": "LOADING"
   },
   "heroSection": {
-    "getYourTickets": "Get Tickets",
-    "getTickets": "Get Tickets"
+    "getYourTickets": "Reserve a ticket",
+    "getTickets": "Reserve a ticket"
   },
   "artistsPage": {
     "title": "Artists",
