feat: Integrate homepage content fetching across multiple components, enhancing navigation settings and improving UI consistency

--- a/lib/i18n/locales/en.json
+++ b/lib/i18n/locales/en.json
@@ -510,6 +510,7 @@
       "backToMerch": "Merch",
       "noImage": "No Image Available",
       "quantity": "Quantity",
+      "size": "Size",
       "total": "Total",
       "outOfStock": "Out of Stock",
       "addToCart": "Add to cart",
