--- a/lib/i18n/locales/fr.json
+++ b/lib/i18n/locales/fr.json
@@ -510,6 +510,7 @@
       "backToMerch": "Merch",
       "noImage": "Aucune image disponible",
       "quantity": "Quantité",
+      "size": "Taille",
       "total": "Total",
       "outOfStock": "Rupture de stock",
       "addToCart": "Ajouter au panier",
